--- a/global.css
+++ b/global.css
@@ -42,3 +42,14 @@ li {
     font-weight: 700;
   }
 }
+h2 {
+  text-align: center;
+  background-color: aquamarine;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+}
+div {
+  text-align: right;
+background-color: blue;
+width: 200px;
+}
